--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         outline: none;
         color: #1b5e20;
         font-size: 20px;
+        margin: 20px;
       }
       button{
         border: none;
