--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
         box-sizing: border-box;
         font-family: 'Courier New', Courier, monospace
       }
+      .inputs{
+        display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+      }
       body {
         background-color: #333;
         display: flex;
